[package]
name = "miniconf"
# Don't forget to change `miniconf_derive`'s version as well.
version = "0.7.1"
authors = ["James Irwin <irwineffect@gmail.com>", "Ryan Summers <ryan.summers@vertigo-designs.com", "Robert Jördens <rj@quartiq.de>"]
edition = "2021"
license = "MIT"
description = "Inspect serde namespaces by path"
repository = "https://github.com/quartiq/miniconf"
keywords = ["settings", "serde", "no_std", "json", "mqtt"]
categories = ["no-std", "config", "rust-patterns", "parsing"]
rust-version = "1.65.0"
resolver = "2"

[dependencies]
miniconf_derive = { path = "miniconf_derive" , version = "0.6" }
serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core.git" , optional = true}
serde = { version = "1.0.120", features = ["derive"], default-features = false }
log = {version = "0.4", optional = true}
heapless = { version = "0.7", features = ["serde"], optional=true }
minimq = { version = "0.7", optional = true }
smlang = { version = "0.6", optional = true }
itoa = "1.0.4"

[features]
default = ["mqtt"]
json = ["dep:serde-json-core", "dep:heapless"]
mqtt = ["dep:minimq", "dep:smlang", "dep:log", "json"]

[dev-dependencies]
machine = "0.3"
env_logger = "0.9"
std-embedded-nal = "0.1"
tokio = { version = "1.9", features = ["rt-multi-thread", "time", "macros"] }
std-embedded-time = "0.1"

[patch.crates-io.std-embedded-nal]
version = "0.1"
git = "https://gitlab.com/ryan-summers/std-embedded-nal"
branch = "feature/0.7"

[[example]]
name = "mqtt"
required-features = ["mqtt"]

[[example]]
name = "readback"
required-features = ["json"]
