[package]
name = "crosstrait"
version = "0.1.0"
edition = "2021"
authors = ["Robert Jördens <rj@quartiq.de>"]
license = "MIT OR Apache-2.0"
description = "Cast from `dyn Any` to other trait objects, with no_std, no alloc support"
repository = "https://github.com/quartiq/miniconf"
documentation = "https://docs.rs/crosstrait"
readme = "README.md"
categories = ["rust-patterns", "embedded", "no-std", "no-std::no-alloc"]
keywords = ["linkage", "trait", "cast", "any"]

[dependencies]
linkme = "0.3"
heapless = "0.8" # not(feature = "std")
gensym = "0.1"
once_cell = { version = "1.19", default-features = false, features = ["critical-section"] }

[features]
std = ["alloc", "once_cell/std"]
used_linker = ["linkme/used_linker"]
alloc = []
default = ["std"]
