[package]
name = "derive_miniconf"
version = "0.3"
authors = ["James Irwin <irwineffect@gmail.com>", "Ryan Summers <ryan.summers@vertigo-designs.com"]
edition = "2018"
license = "MIT"
description = "Derive utilities for Miniconf run-time settings configuration"
repository = "https://github.com/quartiq/miniconf/derive_miniconf"

keywords = ["settings", "embedded", "no_std", "configuration", "mqtt"]
categories = ["no-std", "config", "embedded", "parsing"]

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0.58", features=["extra-traits"] }
quote = "1.0.8"
proc-macro2 = "1.0.24"
