[package]
name = "miniconf"
# Sync all crate versions and the py client
version = "0.18.0"
authors = [
    "James Irwin <irwineffect@gmail.com>",
    "Ryan Summers <ryan.summers@vertigo-designs.com>",
    "Robert Jördens <rj@quartiq.de>",
]
edition = "2021"
license = "MIT"
description = "Serialize/deserialize/access reflection for trees"
repository = "https://github.com/quartiq/miniconf"
keywords = ["config", "serde", "no_std", "reflection", "graph"]
categories = ["embedded", "config", "data-structures", "parsing"]

[dependencies]
serde = { version = "1.0.120", default-features = false }
miniconf_derive = { path = "../miniconf_derive", version = "0.18.0", optional = true }
itoa = "1.0.4"
serde-json-core = { version = "0.6.0", optional = true }
postcard = { version = "1.0.8", optional = true }
thiserror = { version = "2", default-features = false }

[features]
default = ["derive"]
json-core = ["dep:serde-json-core"]
postcard = ["dep:postcard"]
derive = ["dep:miniconf_derive", "serde/derive"]
alloc = []
std = ["alloc"]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
anyhow = "1.0.86"
postcard = { version = "1.0.8", features = ["use-std"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-io-adapters = { version = "0.6.1", features = ["tokio-1"] }
heapless = "0.8.0"
yafnv = "3.0.0"
tokio = { version = "1.38.0", features = ["io-std", "rt", "macros"] }
strum = { version = "0.27.1", features = ["derive"] }
trybuild = { version = "1.0.99", features = ["diff"] }
serde_json = "1.0.133"
serde-reflection = { version = "0.5", path = "../../serde-reflection/serde-reflection" }
once_cell = "1.21.3"

[[test]]
name = "arrays"
required-features = ["json-core", "derive"]

[[test]]
name = "basic"
required-features = ["json-core", "derive"]

[[test]]
name = "generics"
required-features = ["json-core", "derive"]

[[test]]
name = "iter"
required-features = ["json-core", "derive"]

[[test]]
name = "option"
required-features = ["json-core", "derive"]

[[test]]
name = "packed"
required-features = ["json-core", "derive"]

[[test]]
name = "skipped"
required-features = ["derive"]

[[test]]
name = "structs"
required-features = ["json-core", "derive"]

[[test]]
name = "enum"
required-features = ["json-core", "derive"]

[[test]]
name = "validate"
required-features = ["json-core", "derive"]

[[test]]
name = "flatten"
required-features = ["json-core", "derive"]

[[test]]
name = "compiletest"
required-features = ["derive"]

[[example]]
name = "common"
crate-type = ["lib"]
required-features = ["derive"]

[[example]]
name = "cli"
required-features = ["json-core", "derive"]

[[example]]
name = "menu"
required-features = ["json-core", "derive", "postcard"]

[[example]]
name = "scpi"
required-features = ["json-core", "derive"]

[[example]]
name = "trace"
required-features = ["json-core", "derive"]
