[package]
name = "miniconf"
# Sync all crate versions and the py client
version = "0.20.0"
description = "Serialize/deserialize/access reflection for trees"
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.120", default-features = false }
miniconf_derive = { path = "../miniconf_derive", version = "0.20.0", optional = true }
itoa = "1.0.4"
serde-json-core = { version = "0.6.0", optional = true }
postcard = { version = "1.0.8", optional = true }
thiserror = { version = "2", default-features = false }
serde-reflection = { version = "0.5", git = "https://github.com/zefchain/serde-reflection.git", optional = true }
schemars = { version = "1.0.4", optional = true, default-features = false }
serde_json = { version = "1.0.133", features = [
    "preserve_order",
], optional = true }
heapless = { version = "0.8", optional = true }

[features]
default = ["derive", "meta-str"]
alloc = []
std = ["alloc"]
meta-str = ["miniconf_derive/meta-str"]
json-core = ["dep:serde-json-core"]
json = ["dep:serde_json"]
postcard = ["dep:postcard"]
heapless = ["dep:heapless"]
derive = ["dep:miniconf_derive", "serde/derive"]
trace = ["std", "dep:serde-reflection"]
schema = ["trace", "dep:schemars", "json"]

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
anyhow = "1.0.86"
postcard = { version = "1.0.8", features = ["use-std"] }
crosstrait = { version = "0.1", default-features = false }
heapless = "0.8.0"
strum = { version = "0.27.1", features = ["derive"] }
trybuild = { version = "1.0.99", features = ["diff"] }
serde_json = "1.0.133"
jsonschema = { version = "0.33.0", default-features = false }

[[test]]
name = "arrays"
required-features = ["json-core", "derive"]

[[test]]
name = "basic"
required-features = ["json-core", "derive"]

[[test]]
name = "generics"
required-features = ["json-core", "derive"]

[[test]]
name = "iter"
required-features = ["json-core", "derive"]

[[test]]
name = "option"
required-features = ["json-core", "derive"]

[[test]]
name = "packed"
required-features = ["json-core", "derive"]

[[test]]
name = "skipped"
required-features = ["derive"]

[[test]]
name = "structs"
required-features = ["json-core", "derive"]

[[test]]
name = "enum"
required-features = ["json-core", "derive"]

[[test]]
name = "validate"
required-features = ["json-core", "derive"]

[[test]]
name = "flatten"
required-features = ["json-core", "derive"]

[[test]]
name = "compiletest"
required-features = ["derive"]

[[example]]
name = "common"
crate-type = ["lib"]
required-features = ["derive"]

[[example]]
name = "cli"
required-features = ["json-core", "derive"]

[[example]]
name = "scpi"
required-features = ["json-core", "derive"]

[[example]]
name = "trace"
required-features = ["derive", "schema"]
