[package]
name = "miniconf_cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/quartiq/miniconf"
authors = ["Robert Jördens <rj@quartiq.de>"]
description = "CLI library for Miniconf"
keywords = ["settings", "serde", "no_std", "json", "mqtt"]
categories = ["no-std", "config", "rust-patterns", "parsing"]

[dependencies]
miniconf = { version = "0.11.0", path = "../miniconf" }
