[package]
name = "miniconf_coap"
version = "0.1.0"
description = "CoAP interface for `miniconf`"
autoexamples = false
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["json"]
json = ["dep:serde-json-core", "miniconf/json-core"]
postcard = ["dep:postcard", "miniconf/postcard"]

[dependencies]
coap-message = "0.3.6"
coap-numbers = "0.2.9"
defmt = "1.0.1"
heapless = "0.9.1"
miniconf = { version = "0.20.1", features = ["defmt"], default-features = false, path = "../miniconf" }
postcard = { version = "1.0.8", optional = true }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.6.0", optional = true }

[dev-dependencies]
coap-message-implementations = "0.1.10"
defmt2log = "0.2.0"
env_logger = "0.11"
miniconf = { features = [
    "defmt",
    "derive",
    "json-core",
    "heapless-09",
    "sem",
    "meta-node",
    "meta-edge",
], path = "../miniconf" }
serde = { version = "1", default-features = false, features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
