[package]
name = "miniconf_derive"
version = "0.6.2"
authors = ["James Irwin <irwineffect@gmail.com>", "Ryan Summers <ryan.summers@vertigo-designs.com", "Robert Jördens <rj@quartiq.de>"]
edition = "2021"
license = "MIT"
description = "Inspect serde namespaces by path (Miniconf derive macro)"
repository = "https://github.com/quartiq/miniconf"
keywords = ["settings", "serde", "no_std", "json", "mqtt"]
categories = ["no-std", "config", "rust-patterns", "parsing"]

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0.58", features=["extra-traits"] }
quote = "1.0.8"
proc-macro2 = "1.0.24"
