[package]
name = "miniconf_derive"
version = "0.20.0"
description = "Derive macros for `miniconf`"
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[features]
default = []
meta-str = []

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.23"
