[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[license]
text = "MIT"

[project]
name = "miniconf-mqtt"
# Note: keep this in sync with Cargo.toml
version = "0.11.0"
#url = "https://github.com/quartiq/miniconf"
description = "Utilities for configuring Miniconf-configurable devices"
authors = [
    { name = "Ryan Summers", email = "ryan.summers@vertigo-designs.com" },
    { name = "Robert Jördens", email = "rj@quartiq.de" },
]
dependencies = [
    "aiomqtt",
]
