[package]
name = "crosstrait-embedded-test"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-semihosting = { version = "0.6", features = ["exit"] }

crosstrait = { path = "../..", default-features = false }
miniconf = { path = "../../../miniconf", features = ["json-core", "postcard", "derive"], default-features = false }

[features]
used_linker = ["crosstrait/used_linker"]
default = ["used_linker"]

[workspace]
